--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,14 +11,22 @@ phases:
 
   pre_build:
     commands:
-      - echo Entered the pre_build phase...
-
+      - echo Logging in to Amazon ECR...
+      - $(aws ecr get-login --region us-east-2)
+      
   build:
     commands:
-      - echo Entered the build phase...
       - echo Build started on `date`
+      - echo Building the Docker image...          
+      - docker build -t node-microservice-ci-cd .
+      - docker tag node-microservice-ci-cd:latest $(aws sts get-caller-identity --output text --query 'Account').dkr.ecr.us-east-2.amazonaws.com/node-microservice-ci-cd:latest      
 
   post_build:
     commands:
-      - echo Entered the post_build phase...
       - echo Build completed on `date`
+      - echo Pushing the Docker image...
+      - docker push $(aws sts get-caller-identity --output text --query 'Account').dkr.ecr.us-east-2.amazonaws.com/node-microservice-ci-cd:latest
+
+artifacts:
+  files:
+    - '**/*'
