--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - $(aws ecr get-login --region us-east-2)
+      - $(aws ecr get-login --region us-east-2 --no-include-email)
       
   build:
     commands:
