--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "users-service",
+  "name": "node-microservice-ci-cd",
   "version": "1.0.0",
   "description": "Example Node Microservice",
   "scripts": {
