--- a/infrastructure/pipeline.yaml
+++ b/infrastructure/pipeline.yaml
@@ -4,10 +4,6 @@ Description: 'Pipeline'
 Parameters:
   ApplicationName:
     Type: String
-    Default: node-microservice-ci-cd
-  DatabaseName:
-    Type: String
-    Default: nodeMicroserviceCICD
   GithubRepoName:
     Type: String
   GitHubRepoOwner:
@@ -184,7 +180,7 @@ Resources:
             OutputFileName: 'infrastructure/output-environment-qa.json'
             TemplateConfiguration: 'Zip::infrastructure/environment-qa.input.json'
             TemplatePath: 'Zip::infrastructure/environment.yaml'
-            ParameterOverrides: !Sub '{"ApplicationName": "${ApplicationName}", "DatabaseName": "${DatabaseName}"}'
+            ParameterOverrides: !Sub '{"ApplicationName": "${ApplicationName}"}'
           InputArtifacts:
           - Name: Zip
           OutputArtifacts:
@@ -226,7 +222,7 @@ Resources:
             OutputFileName: 'infrastructure/output-environment-prod.json'
             TemplateConfiguration: 'Zip::infrastructure/environment-prod.input.json'
             TemplatePath: 'Zip::infrastructure/environment.yaml'
-            ParameterOverrides: !Sub '{"ApplicationName": "${ApplicationName}", "DatabaseName": "${DatabaseName}"}'
+            ParameterOverrides: !Sub '{"ApplicationName": "${ApplicationName}"}'
           InputArtifacts:
           - Name: Zip
           OutputArtifacts:
